log
Wed 20 Mar 2024 11:53:35 PM UTC: 
 tests:  0|5
total_score: 0/70
dc9aa57
Wed 20 Mar 2024 11:56:20 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
fcbbd6d
Thu 21 Mar 2024 12:00:28 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e6782f2
Thu 21 Mar 2024 12:09:34 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
b578376
Thu 21 Mar 2024 12:10:46 AM UTC: 
 exercises.c | 20 +++++++-------------
 1 file changed, 7 insertions(+), 13 deletions(-)
 tests:  0|0
fc89ccd
Thu 21 Mar 2024 12:15:59 AM UTC: 
 exercises.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  2|3
total_score: 20/70
0856cb3
Thu 21 Mar 2024 12:18:06 AM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
5ba0aae
Thu 21 Mar 2024 12:19:16 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
b27d663
Thu 21 Mar 2024 12:20:23 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8098566
Thu 21 Mar 2024 12:20:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
148e693
Thu 21 Mar 2024 12:22:28 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
c4df373
Thu 21 Mar 2024 12:22:42 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
   96 |     push(P2, *aux2);
      |              ^~~~~
Compilation failed
f87726b
Thu 21 Mar 2024 12:25:26 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
b0ff499
Thu 21 Mar 2024 12:28:29 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 30/70
ac88cc6
Thu 21 Mar 2024 12:44:54 AM UTC: 
 exercises.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:110:34: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  110 |   char *elemento = (char *)first(cadena);
      |                                  ^~~~~~
      |                                  |
      |                                  char *
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char *’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:112:18: error: comparison with string literal results in unspecified behavior [-Werror=address]
  112 |     if (elemento == "(" || elemento == "[" || elemento == "{") {
      |                  ^~
exercises.c:112:37: error: comparison with string literal results in unspecified behavior [-Werror=address]
  112 |     if (elemento == "(" || elemento == "[" || elemento == "{") {
      |                                     ^~
exercises.c:112:56: error: comparison with string literal results in unspecified behavior [-Werror=address]
  112 |     if (elemento == "(" || elemento == "[" || elemento == "{") {
      |                                                        ^~
exercises.c:117:23: error: comparison between pointer and integer [-Werror]
  117 |         if (top(pila) != '(')
      |                       ^~
exercises.c:120:23: error: comparison between pointer and integer [-Werror]
  120 |         if (top(pila) != '[')
      |                       ^~
exercises.c:123:23: error: comparison between pointer and integer [-Werror]
  123 |         if (top(pila) != '{')
      |                       ^~
exercises.c:129:21: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  129 |     elemento = next(cadena);
      |                     ^~~~~~
      |                     |
      |                     char *
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘char *’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
aab6fa6
Thu 21 Mar 2024 12:45:31 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:110:34: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  110 |   char *elemento = (char *)first(cadena);
      |                                  ^~~~~~
      |                                  |
      |                                  char *
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char *’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:112:18: error: comparison between pointer and integer [-Werror]
  112 |     if (elemento == '(' || elemento == '[' || elemento == '{') {
      |                  ^~
exercises.c:112:37: error: comparison between pointer and integer [-Werror]
  112 |     if (elemento == '(' || elemento == '[' || elemento == '{') {
      |                                     ^~
exercises.c:112:56: error: comparison between pointer and integer [-Werror]
  112 |     if (elemento == '(' || elemento == '[' || elemento == '{') {
      |                                                        ^~
exercises.c:117:23: error: comparison between pointer and integer [-Werror]
  117 |         if (top(pila) != '(')
      |                       ^~
exercises.c:120:23: error: comparison between pointer and integer [-Werror]
  120 |         if (top(pila) != '[')
      |                       ^~
exercises.c:123:23: error: comparison between pointer and integer [-Werror]
  123 |         if (top(pila) != '{')
      |                       ^~
exercises.c:129:21: error: passing argument 1 of ‘next’ makes pointer from integer without a cast [-Werror=int-conversion]
  129 |     elemento = next(*cadena);
      |                     ^~~~~~~
      |                     |
      |                     char
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘char’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
507d3e5
Thu 21 Mar 2024 12:46:32 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:110:34: error: passing argument 1 of ‘first’ makes pointer from integer without a cast [-Werror=int-conversion]
  110 |   char *elemento = (char *)first(*cadena);
      |                                  ^~~~~~~
      |                                  |
      |                                  char
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:117:23: error: comparison between pointer and integer [-Werror]
  117 |         if (top(pila) != '(')
      |                       ^~
exercises.c:120:23: error: comparison between pointer and integer [-Werror]
  120 |         if (top(pila) != '[')
      |                       ^~
exercises.c:123:23: error: comparison between pointer and integer [-Werror]
  123 |         if (top(pila) != '{')
      |                       ^~
exercises.c:129:21: error: passing argument 1 of ‘next’ makes pointer from integer without a cast [-Werror=int-conversion]
  129 |     elemento = next(*cadena);
      |                     ^~~~~~~
      |                     |
      |                     char
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘char’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
0952617
